{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 91,
  "lineage": "c78fc42e-b43d-8eda-cf20-dbd32994de50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "health_checks_to_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow AWS health checks to LoadBalancer",
            "from_port": 10254,
            "id": "sgrule-4028786135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b9a18df10039c77",
            "security_group_rule_id": "sgr-0919a6f44901acaac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10254,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_to_lb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic from internet to LoadBalancer",
            "from_port": 80,
            "id": "sgrule-207172343",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b9a18df10039c77",
            "security_group_rule_id": "sgr-0fdc1fe8482d005d4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_to_lb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS traffic from internet to LoadBalancer",
            "from_port": 443,
            "id": "sgrule-889800785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b9a18df10039c77",
            "security_group_rule_id": "sgr-046a12f2854c35740",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeport_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow NodePort access within VPC",
            "from_port": 30000,
            "id": "sgrule-745217231",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b9a18df10039c77",
            "security_group_rule_id": "sgr-0ea284927e4fa07d0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:security-group/sg-08b9a18df10039c77",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-08b9a18df10039c77",
            "ingress": [],
            "name": "retail-store-gm0f-cluster-2025121110070626570000000f",
            "name_prefix": "retail-store-gm0f-cluster-",
            "owner_id": "661331426430",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-gm0f-cluster",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-gm0f-cluster",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:security-group/sg-00470cf2d9e360566",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-00470cf2d9e360566",
            "ingress": [],
            "name": "retail-store-gm0f-node-2025121110070621620000000e",
            "name_prefix": "retail-store-gm0f-node-",
            "owner_id": "661331426430",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-gm0f-node",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "owned"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-gm0f-node",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-707822054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b9a18df10039c77",
            "security_group_rule_id": "sgr-06478095140722949",
            "self": false,
            "source_security_group_id": "sg-00470cf2d9e360566",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3865437427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-0b294a6429e98cb59",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3307694285",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-03fd96572811fbcd2",
            "self": false,
            "source_security_group_id": "sg-08b9a18df10039c77",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-690944153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-0fa0128175e7ba432",
            "self": false,
            "source_security_group_id": "sg-08b9a18df10039c77",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3765214991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-0047285864237988e",
            "self": false,
            "source_security_group_id": "sg-08b9a18df10039c77",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4080050990",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-006b6d78927cd4bfc",
            "self": false,
            "source_security_group_id": "sg-08b9a18df10039c77",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2542899429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-04085a62ad7e439c3",
            "self": false,
            "source_security_group_id": "sg-08b9a18df10039c77",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3163605002",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-01e4fe34ba5add7ee",
            "self": false,
            "source_security_group_id": "sg-08b9a18df10039c77",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-337416315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-00147f33a05e2e651",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-52203855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-00c42f023afadbe4d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2806198944",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00470cf2d9e360566",
            "security_group_rule_id": "sgr-07695711360233ee9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:network-acl/acl-058e210a19e589092",
            "default_network_acl_id": "acl-058e210a19e589092",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-058e210a19e589092",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "661331426430",
            "subnet_ids": [
              "subnet-06aabfd155a06f19b",
              "subnet-08d6b05251a334ac2",
              "subnet-0ab04d244404bad77",
              "subnet-0b9173db7b37219f6",
              "subnet-0ba7de6ef2ff08625",
              "subnet-0ed7788cc5489b0e9"
            ],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-nacl",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-nacl",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:route-table/rtb-00bd2ab275a0b0b14",
            "default_route_table_id": "rtb-00bd2ab275a0b0b14",
            "id": "rtb-00bd2ab275a0b0b14",
            "owner_id": "661331426430",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-rt",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-rt",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:security-group/sg-00775178e7450f664",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00775178e7450f664",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "661331426430",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-sg",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-sg",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f777dc15fef6ca7a",
            "arn": "arn:aws:ec2:us-west-2:661331426430:elastic-ip/eipalloc-0f777dc15fef6ca7a",
            "domain": "vpc",
            "id": "eipalloc-0f777dc15fef6ca7a",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-25-228-77.us-west-2.compute.amazonaws.com",
            "public_ip": "52.25.228.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:internet-gateway/igw-03dd434ea8df5ad66",
            "id": "igw-03dd434ea8df5ad66",
            "owner_id": "661331426430",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f777dc15fef6ca7a",
            "association_id": "eipassoc-0d77469da3d1f3f64",
            "connectivity_type": "public",
            "id": "nat-02b32d63bd35401ad",
            "network_interface_id": "eni-0d3bfd4f3d8fe04d1",
            "private_ip": "10.0.0.29",
            "public_ip": "52.25.228.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ba7de6ef2ff08625",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06da3e597695ccb351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02b32d63bd35401ad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06da3e597695ccb35",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03dd434ea8df5ad66",
            "id": "r-rtb-04c12fdf1fe9348be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c12fdf1fe9348be",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:route-table/rtb-06da3e597695ccb35",
            "id": "rtb-06da3e597695ccb35",
            "owner_id": "661331426430",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:route-table/rtb-04c12fdf1fe9348be",
            "id": "rtb-04c12fdf1fe9348be",
            "owner_id": "661331426430",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dda8a0e710eb82e",
            "route_table_id": "rtb-06da3e597695ccb35",
            "subnet_id": "subnet-0ab04d244404bad77"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f70edad78ac4706f",
            "route_table_id": "rtb-06da3e597695ccb35",
            "subnet_id": "subnet-0b9173db7b37219f6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eaa926d48620bac",
            "route_table_id": "rtb-06da3e597695ccb35",
            "subnet_id": "subnet-0ed7788cc5489b0e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a69126ab4ed96cbf",
            "route_table_id": "rtb-04c12fdf1fe9348be",
            "subnet_id": "subnet-0ba7de6ef2ff08625"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0049d085c0a1852f0",
            "route_table_id": "rtb-04c12fdf1fe9348be",
            "subnet_id": "subnet-08d6b05251a334ac2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084a2164e3698cac7",
            "route_table_id": "rtb-04c12fdf1fe9348be",
            "subnet_id": "subnet-06aabfd155a06f19b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:subnet/subnet-0ab04d244404bad77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab04d244404bad77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661331426430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2a",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2a",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:subnet/subnet-0b9173db7b37219f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9173db7b37219f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661331426430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2b",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2b",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:subnet/subnet-0ed7788cc5489b0e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed7788cc5489b0e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661331426430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2c",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2c",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:subnet/subnet-0ba7de6ef2ff08625",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba7de6ef2ff08625",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661331426430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2a",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2a",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:subnet/subnet-08d6b05251a334ac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d6b05251a334ac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661331426430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2b",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2b",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:subnet/subnet-06aabfd155a06f19b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aabfd155a06f19b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661331426430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2c",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2c",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-gm0f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-007d265a10e02e2b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661331426430:vpc/vpc-007d265a10e02e2b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-058e210a19e589092",
            "default_route_table_id": "rtb-00bd2ab275a0b0b14",
            "default_security_group_id": "sg-00775178e7450f664",
            "dhcp_options_id": "dopt-0d1b6e274ad868dfb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007d265a10e02e2b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00bd2ab275a0b0b14",
            "owner_id": "661331426430",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-11",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAZT6TMXR7L2NMYPZK6",
              "Project": "retail-store"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}